vertical tabs pane: fix a focus bug; collapse the pane when window is deactivated; avoid collapsing the pane when context menu is closed... if the pane is still hovered; :hover doesn't update if mouse doesn't move, so we have to directly check if mouse coords are inside pane coords.

--- a/uc-popups.css
+++ b/uc-popups.css
@@ -787,7 +787,7 @@ panel#PopupAutoComplete[type="autocomplete-richlistbox"]
 
     input:is([type="email"], [type="tel"], [type="text"], [type="password"], [type="url"]),
     textarea {
-        padding-block: 5px !important;
+        padding: 5px !important;
     }
 
     input:is([type="email"], [type="tel"], [type="text"], [type="password"], [type="url"], [type="number"]):focus,
